--- a/code/site/src/pages/home/home.html
+++ b/code/site/src/pages/home/home.html
@@ -92,7 +92,7 @@
                 <div class="row social-btn-2">
                     <label for="username-2">
                         Username:
-                        <input type="text" name="username" id="username-2" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{8,20}$"
+                        <input type="text" name="username" id="username-2" pattern="^[a-zA-Z][a-zA-Z0-9-_]{8,20}$"
                             required="required" />
                     </label>
                     <div style="width: 10px;"></div>
