--- a/code/admin/src/pages/addCelebrita/addCelebrita.html
+++ b/code/admin/src/pages/addCelebrita/addCelebrita.html
@@ -118,7 +118,9 @@
                         <div class="row" style="margin-bottom: 40px;">
                             <div class="col-md-12">
                                 <div class="overview-wrap">
-                                    <h2 class="title-1"><i class="zmdi zmdi-account-add"></i> CREA NUOVA CELEBRITÀ</h2>
+                                    <h2 class="title-1"><i class="zmdi zmdi-account-add"></i>
+                                        <?php echo $celebritaId ? 'MODIFICA CELEBRITÀ' : 'CREA NUOVA CELEBRITÀ' ?>
+                                    </h2>
                                 </div>
                             </div>
                         </div>
