--- a/code/admin/src/pages/addSerie/addserie.html
+++ b/code/admin/src/pages/addSerie/addserie.html
@@ -118,7 +118,9 @@
                         <div class="row" style="margin-bottom: 40px;">
                             <div class="col-md-12">
                                 <div class="overview-wrap">
-                                    <h2 class="title-1"><i class="zmdi zmdi-movie"></i> CREA NUOVO FILM</h2>
+                                    <h2 class="title-1"><i class="zmdi zmdi-movie-alt"></i>
+                                        <?php echo $serieId ? 'MODIFICA SERIE' : 'CREA NUOVA SERIE' ?>
+                                    </h2>
                                 </div>
                             </div>
                         </div>
