serie quasi completa

--- a/code/admin/src/switch.html
+++ b/code/admin/src/switch.html
@@ -270,7 +270,8 @@
           <div class="container-fluid">
             <div class="header-wrap">
               <form class="form-header" action="" method="POST">
-                <input class="au-input au-input--xl" type="text" name="search" placeholder="Search for datas &amp; reports..." />
+                <input class="au-input au-input--xl" type="text" name="search"
+                  placeholder="Search for datas &amp; reports..." />
                 <button class="au-btn--submit" type="submit">
                   <i class="zmdi zmdi-search"></i>
                 </button>
@@ -767,10 +768,10 @@
                     <strong class="card-title">Switch with Text</strong>
                   </div>
                   <div class="card-body">
-                    <label class="switch switch-text switch-primary">
-                      <input type="checkbox" class="switch-input" checked="true">
-                      <span data-on="On" data-off="Off" class="switch-label"></span>
-                      <span class="switch-handle"></span>
+                    <label class="switch switch-text switch-primary" size="xs">
+                      <input type="checkbox" class="switch-input" checked="true" size="xs">
+                      <span data-on="On" data-off="Off" class="switch-label" size="xs"></span>
+                      <span class="switch-handle" size="xs"></span>
                     </label>
 
                     <label class="switch switch-text switch-secondary">
