--- a/code/admin/src/pages/addSerie/addserie.html
+++ b/code/admin/src/pages/addSerie/addserie.html
@@ -148,10 +148,23 @@
                                             <div class="col col-md-3">
                                                 <label for="titolo" class=" form-control-label">Titolo*</label>
                                             </div>
-                                            <div class="col-12 col-md-9">
+                                            <div class="col-6 col-md-5">
                                                 <input type="text" id="titolo" name="titolo"
                                                     placeholder="Scrivi il titolo completo del film" required
                                                     class="form-control">
+                                            </div>
+                                            <div class="col col-md-2 text-center">
+                                                <label for="durata" class=" form-control-label">
+                                                    Conclusa*
+                                                </label>
+                                            </div>
+                                            <div class="col-2 col-md-2">
+                                                <label class="switch switch-text switch-success">
+                                                    <input type="checkbox" class="switch-input" checked="false"
+                                                        id="completata">
+                                                    <span data-on="Si" data-off="No" class="switch-label"></span>
+                                                    <span class="switch-handle"></span>
+                                                </label>
                                             </div>
                                         </div>
                                         <div class="row form-group">
@@ -254,6 +267,22 @@
                                         </div>
 
                                         <div class="form-group" id="troupe" style="min-height: 20px;"></div>
+
+                                        <!--STAGIONI-->
+                                        <div class="col-12 divider"></div>
+                                        <div class="row form-group">
+                                            <div class="col col-md-3">
+                                                <label for="data" class=" form-control-label">Stagioni*</label>
+                                            </div>
+                                            <div class="col-12 col-md-9">
+                                                <button type="button" class="btn btn-primary" id="addStagione">
+                                                    <i class="fa fa-plus" style="margin-right: 10px;"></i>
+                                                    Aggiungi stagione
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group" id="stagioni" style="min-height: 20px;"></div>
                                     </form>
                                 </div>
                                 <div class="card-footer" style="background: #233a50;">
