--- a/code/admin/src/pages/serie/serie.html
+++ b/code/admin/src/pages/serie/serie.html
@@ -51,21 +51,35 @@
                             <a href="../home/home.php">
                                 <i class="fas fa-bar-chart-o"></i>Panoramica</a>
                         </li>
+                        <?php if(!empty(array_intersect([2,3], $permessi))){ ?>
                         <li class="active has-sub">
                             <a class="js-arrow" href="#">
                                 <i class="fas fa-table"></i>Gestisci Risorse</a>
                             <ul class="list-unstyled navbar__sub-list js-sub-list">
+                                <?php if(in_array(3, $permessi)){ ?>
                                 <li>
-                                    <a href="../film/film.php">Film</a>
+                                    <a href="../film/film.php"><i class="zmdi zmdi-movie"></i>Film</a>
                                 </li>
+                                <?php } ?>
+                                <?php if(in_array(3, $permessi)){ ?>
                                 <li>
-                                    <a href="../serie/serie.php">Serie</a>
+                                    <a href="../serie/serie.php"><i class="zmdi zmdi-movie-alt"></i>Serie</a>
                                 </li>
+                                <?php } ?>
+                                <?php if(in_array(3, $permessi)){ ?>
                                 <li>
-                                    <a href=" ../celebrita/celebrita.php">Celebrità</a>
+                                    <a href=" ../celebrita/celebrita.php"><i
+                                            class="zmdi zmdi-accounts-list"></i>Celebrità</a>
                                 </li>
+                                <?php } ?>
+                                <?php if(in_array(2, $permessi)){ ?>
+                                <li>
+                                    <a href=" ../users/users.php"><i class="zmdi zmdi-accounts-alt"></i>Utenti</a>
+                                </li>
+                                <?php } ?>
                             </ul>
                         </li>
+                        <?php } ?>
                         <li>
                             <a href="../../../../site/src/index.php">
                                 <i class="fas fa-arrow-alt-circle-left"></i>Torna al sito</a>
