--- a/code/site/src/pages/celebritysingle/celebritysingle.html
+++ b/code/site/src/pages/celebritysingle/celebritysingle.html
@@ -162,7 +162,7 @@
                                     echo '<img src="../../images/uploads/user.jpg" alt="" width="40" height="40">';
                                 }
                                 echo '<li><a href="../profilo/profilo.php">' . $utente['nome'] . '</a></li>';
-                                if(in_array(2, $permessi)){
+								if(!empty(array_intersect([2,3], $permessi))){
                                     echo '<li><a href="../../../../admin/src/index.php">Amministrazione</a></li>';
                                 }
                                 echo '<li><a href="../service/logout.php">Disconetti</a></li>';
@@ -302,16 +302,31 @@
 														?>
 													</p>
 												</div>
+												<?php if($personaggio['data_morte']){ ?>
+												<div class="sb-it">
+													<h6>Data di Morte: </h6>
+													<p>
+														<?php 
+															$date = new DateTime($personaggio['data_morte']);
+                                                            $date_formatter = new IntlDateFormatter('it_IT', IntlDateFormatter::LONG, IntlDateFormatter::NONE);
+                                                            $formatted_date = $date_formatter->format($date);
+                                                            echo $formatted_date;
+														?>
+													</p>
+												</div>
+												<?php }?>
+												<div class="sb-it">
+													<h6>Età: </h6>
+													<p>
+														<?php 
+														echo date_diff(new DateTime($personaggio['data_nascita']), new DateTime($personaggio['data_morte'] ?? null))->format('%Y anni');
+														?>
+													</p>
+												</div>
 												<div class="sb-it">
 													<h6>Nazione: </h6>
 													<p>
 														<?php echo $personaggio['nazionalita']  ?>
-													</p>
-												</div>
-												<div class="sb-it">
-													<h6>Altezza:</h6>
-													<p>
-														<?php echo $personaggio['altezza'] . ' m' ?>
 													</p>
 												</div>
 											</div>
